# chatter

./: .gitignore  Cargo.toml  build.rs
proto/: list.proto  message.proto
src/: client.rs  main.rs  server.rs
src/message/: chatter_list.rs  chatter_message.rs  mod.rs
src/oidc/: oidc.rs
src/service/: api.rs
