[package]
name = "grpcChat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"
[[bin]]
name = "client"
path = "src/client.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tonic-build = "0.13"
names = { version = "0.14.0", default-features = false }

[dependencies]
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "rt"] }
tonic-build = "0.13.0"